src/main/java/com/example/board/error/exception/InvalidTokenException.java
package com.example.board.error.exception;

import com.example.board.error.ErrorCode;

public class InvalidTokenException extends BusinessException {

    public InvalidTokenException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}